# server/common/api.yml
@@ -15,6 +15,8 @@ tags:
     description: mock trade configuration
   - name: MockTrades
     description: mock trade records
+  - name: Strategy
+    description: the trade strategy
 
 consumes:
   - application/json
@@ -80,6 +82,38 @@ definitions:
           state: '启动',
           result: '以19.24买入400股'
         }
+
+  newMockTrade:
+    type: object
+    title: MockTrade
+    required:
+      - accesstoken
+      - strategyId
+      - params
+    properties:
+      accesstoken:
+        type: string
+        example: NWQ5MDVkYjlmYzg0ZDMyMjRiMGViNTljOjE2Nzg0M2Q5ZDQ3ZGJlMGE2OWE4MWEzYjBjNDgwNmY1NDM5NmM5ZmY5YjU4OWExNTdkMTE3Y2FjOWQzYmMzMGU=
+      strategyId:
+        type: string
+        example: 5da19b7d181fc3600c5544c2
+      params:
+        type: object
+        example: {
+          code : '002899',
+          monitorTime : {
+            start : "09:30",
+            end : "15:00"
+          },
+          index_percent : {
+            low : -1.5,
+            high : 3.0
+          },
+          percent : {
+            low : -2.0,
+            high : 3.0
+          }
+        }      
               
 
 paths:
@@ -215,7 +249,49 @@ paths:
             $ref: "#/definitions/mockTradeBody"
       responses:
         200:
-          description: Return the updated mock trade      
+          description: Return the updated mock trade  
+
+  /mocktrade/new:
+    post:
+      tags:
+        - MockTrades  
+      description: create new mock trade 
+      parameters:
+        - name: newData 
+          in: body
+          required: true
+          description: the mocktrade create data
+          schema: 
+            $ref: "#/definitions/newMockTrade"
+      responses:
+        200:
+          description: Return the created mock trade            
+
+          
+  /strategy:
+    get:
+      tags:
+        - Strategy
+      description: get all available trade strategies
+      responses:
+        200:
+          description: return all strategies
+
+  /strategy/{strategyId}:
+    get:
+      tags:
+        - Strategy
+      parameters:
+        - name: strategyId
+          in: path
+          required: true
+          description: strategyId
+          type: string
+          x-example: 5da19b7d181fc3600c5544c2
+      description: get trade strategy by id
+      responses:
+        200:
+          description: return strategy        
 
   /spec:
     get:
